--- a/css/style.css
+++ b/css/style.css
@@ -1104,7 +1104,6 @@ input:checked + .input__radio::before {
 .calculator__data_result {
     background-color: var(--color-grey);
     width: 452px;
-    height: 470px;
     border-radius: 32px;
     padding: 32px;
 }
@@ -1207,6 +1206,7 @@ input:checked + .input__radio::before {
     width: 414px;
     height: 300px;
     margin-top: -1px;
+    overflow: hidden;
     position: relative;
     z-index: -1;
 }
@@ -1267,6 +1267,7 @@ input:checked + .input__radio::before {
     width: 304px;
     margin-top: -1px;
     position: relative;
+    overflow: hidden;
     z-index: -1;
 }
 
